# ProjetoEngenharia-SimuladorDoEfeitoSismoeletrico

Simulação/lyx/: 3-Projeto-ModelosDeEngenharia-Master.lyx  Cap0-Introducao-Escopo-Objetivos.lyx  Cap1-Especificacao.lyx  Cap2-Elaboracao.lyx  Cap3-AnaliseOrientadaAObjeto.lyx  Cap4-Projeto.lyx  Cap6-Implementacao.lyx  Cap7-Teste.lyx  Cap8-Documentacao.lyx  DocumentoMestre-Trabalho-ProgramacaoPratica.lyx  bibliografia.bib  fft.cpp  fft.h  gnuPlotter.cpp  main.cpp  rockProperties.h  seismicSimulator.cpp
Simulação/src/: CMakeLists.txt  eigenValueSolver.cpp  eigenValueSolver.h  fft.cpp  fft.h  fluidProperties.h  gnuPlotter.cpp  gnuPlotter.h  main.cpp  seismicSimulator.cpp  seismicSimulator.h  systemParameters.h
Simulação/src/buildE/: CMakeCache.txt  Makefile  cmake_install.cmake  temp_data_v.txt  temp_data_x.txt
